# NILS

./: .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
backend/: Dockerfile  pyproject.toml
backend/src/: logging_config.py
backend/src/anonymize/: __init__.py  config.py  core.py  exporter.py  store.py
backend/src/api/: application_tables.py  metadata_tables.py  server.py  stage_sync.py
backend/src/backup/: __init__.py  manager.py
backend/src/bids/: __init__.py  exporter.py
backend/src/classification/: __init__.py  pipeline.py  utils.py
backend/src/cli/: app.py
backend/src/cohorts/: __init__.py  models.py  repository.py  service.py  stats.py
backend/src/compress/: __init__.py  config.py  engine.py
backend/src/db/: backup.py  config.py  session.py
backend/src/extract/: __init__.py  batching.py  config.py  core.py  dicom_mappings.py  limits.py  process_pool.py  profiler.py  progress.py  resume_index.py  scanner.py  stack_utils.py  subject_mapping.py  worker.py  writer.py  writer_pool.py
backend/src/jobs/: __init__.py  control.py  errors.py  models.py  repository.py  runner.py  service.py
backend/src/metadata_db/: __init__.py  backup.py  config.py  lifecycle.py  metrics.py  schema.py  session.py
backend/src/metadata_imports/: __init__.py  (+6 more)
backend/tests/: test_cohort_api.py  test_cohort_folder_examples.py  test_csv_upload_api.py  test_extract_limits.py  test_id_type_api.py  test_job_config_api.py  test_metadata_api.py  test_nils_pipeline_ordering.py  test_subject_cohort_import_api.py  test_subject_identifier_api.py  test_subject_import_api.py  test_system_resources_endpoint.py
(+303 files in other folders)
