[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nils-backend"
version = "0.1.0"
description = "Backend services for NILS - Neuroimaging Intelligent Linked System"
authors = [{ name = "Nima Chamyani", email = "nima.chamyani@ki.se" }]
maintainers = [{ name = "Nima Chamyani", email = "nima.chamyani@ki.se" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10",
  "pydicom>=3.0",
  "polars>=1.12",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "msoffcrypto-tool>=5.1",
  "typer>=0.19",
  "rich>=13.9",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psutil>=5.9",
  "python-multipart>=0.0.9",
  "rapidfuzz>=3.0",
  "pillow>=10.0",
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/NeuroGranberg/NILS"
Documentation = "https://neurogranberg.github.io/NILS/"
Repository = "https://github.com/NeuroGranberg/NILS"
Issues = "https://github.com/NeuroGranberg/NILS/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "testcontainers[postgres]>=4.9",
  "httpx>=0.27",
]

[project.scripts]
neuro-backend = "cli.app:app"
neuro-api = "api.server:main"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sort" = ["*.yaml"]
"classification" = ["detection_yaml/*.yaml"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

